align fix 2

--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -6,11 +6,6 @@
   float: left;
   padding: 0 100px;
   position: relative;
-  margin-top: 98px
-}
-
-.mobile-anim-block .phone-block .mobile-ver {
-  display: none
 }
 
 .mobile-anim-block .main-phone {
